--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
           </li>
           <li>
-            <h3>Technologies</h3git>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
