--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
 
       <section>
-        <h2 hidden>Features</h2>gi
+        <h2 hidden>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
